Extract new user form to a component

--- a/src/app/routes/admin/pages/create-user-page/create-user-page.component.html
+++ b/src/app/routes/admin/pages/create-user-page/create-user-page.component.html
@@ -1,76 +1,4 @@
-<form [formGroup]="form" (ngSubmit)="onSubmit()">
-  <h3>New User</h3>
-  <hr />
-  <div class="form-group row" title="User's e-mail address">
-    <label for="account-form-email" class="col-sm-4 col-md-3 col-form-label">
-      E-mail address
-    </label>
-    <div class="col-sm-8 col-md-9">
-      <input id="account-form-email" type="text" class="form-control" formControlName="email" />
-    </div>
-  </div>
-  <div class="form-group row" title="User's role">
-    <label for="account-form-role" class="col-sm-4 col-md-3 col-form-label">Role</label>
-    <div class="col-sm-8 col-md-9">
-      <select id="account-form-role" class="form-control" formControlName="role">
-        <option value="user">User</option>
-        <option value="admin">Admin</option>
-      </select>
-    </div>
-  </div>
-  <div class="form-group row" title="User's password">
-    <label for="account-form-password" class="col-sm-4 col-md-3 col-form-label">
-      Password
-    </label>
-    <div class="col-sm-8 col-md-9">
-      <input
-        id="account-form-password"
-        type="password"
-        class="form-control"
-        formControlName="password"
-      />
-    </div>
-  </div>
-  <div class="form-group row" title="Confirm password">
-    <label for="account-form-confirm-password" class="col-sm-4 col-md-3 col-form-label">
-      Confirm password
-    </label>
-    <div class="col-sm-8 col-md-9">
-      <input
-        id="account-form-confirm-password"
-        type="password"
-        class="form-control"
-        formControlName="confirmPassword"
-      />
-    </div>
-  </div>
-  <div class="form-group row" title="User's first name">
-    <label for="account-form-first-name" class="col-sm-4 col-md-3 col-form-label">
-      First name
-    </label>
-    <div class="col-sm-8 col-md-9">
-      <input
-        id="account-form-first-name"
-        type="text"
-        class="form-control"
-        formControlName="firstName"
-      />
-    </div>
-  </div>
-  <div class="form-group row" title="User's last name">
-    <label for="account-form-last-name" class="col-sm-4 col-md-3 col-form-label">
-      Last name
-    </label>
-    <div class="col-sm-8 col-md-9">
-      <input
-        id="account-form-last-name"
-        type="text"
-        class="form-control"
-        formControlName="lastName"
-      />
-    </div>
-  </div>
-  <div class="text-right">
-    <button type="submit" class="btn btn-outline-primary">Save</button>
-  </div>
-</form>
+<h3>New User</h3>
+<hr />
+
+<app-new-user-form (save)="onSubmit($event)"></app-new-user-form>
