--- a/src/app/routes/admin/pages/users-list-page/users-list-page.component.html
+++ b/src/app/routes/admin/pages/users-list-page/users-list-page.component.html
@@ -3,22 +3,21 @@
   <a class="btn btn-outline-primary" routerLink="create">New User</a>
 </div>
 
-<hr />
+<hr/>
+<ngb-pagination
+  (pageChange)="onPageChange($event)"
+  [page]="users.number + 1"
+  [pageSize]="users.number_of_elements"
+  [collectionSize]="users.total_elements"
+  [disabled]="users.total_pages === 1"
+></ngb-pagination>
 
-<ng-template [ngIf]="users.total_pages > 1">
-  <ngb-pagination
-    (pageChange)="onPageChange($event)"
-    [page]="users.number + 1"
-    [pageSize]="users.number_of_elements"
-    [collectionSize]="users.total_elements"
-  ></ngb-pagination>
-</ng-template>
 <app-users-list [users]="users.content" [offset]="size * page + 1"></app-users-list>
-<ng-template [ngIf]="users.total_pages > 1">
-  <ngb-pagination
-    (pageChange)="onPageChange($event)"
-    [page]="users.number + 1"
-    [pageSize]="users.number_of_elements"
-    [collectionSize]="users.total_elements"
-  ></ngb-pagination>
-</ng-template>
+
+<ngb-pagination
+  (pageChange)="onPageChange($event)"
+  [page]="users.number + 1"
+  [pageSize]="users.number_of_elements"
+  [collectionSize]="users.total_elements"
+  [disabled]="users.total_pages === 1"
+></ngb-pagination>
