--- a/src/app/core/layout/menu/menu.component.html
+++ b/src/app/core/layout/menu/menu.component.html
@@ -1,9 +1,5 @@
-<div class="card">
-  <div class="card-body">
-    <ul>
-      <li *ngFor="let item of menu">
-        <a [routerLink]="item.url" routerLinkActive="active">{{ item.name }}</a>
-      </li>
-    </ul>
-  </div>
-</div>
+<ul class="nav nav-tabs">
+  <li *ngFor="let item of menu" class="nav-item">
+    <a [routerLink]="item.url" class="nav-link" routerLinkActive="active">{{ item.name }}</a>
+  </li>
+</ul>
