--- a/src/app/routes/admin/components/new-user-form/new-user-form.component.html
+++ b/src/app/routes/admin/components/new-user-form/new-user-form.component.html
@@ -75,6 +75,8 @@
     </div>
   </div>
   <div class="text-right">
-    <button type="submit" class="btn btn-outline-primary" [disabled]="!isValid()">Save</button>
+    <button type="submit" class="btn btn-outline-primary" [disabled]="!isValid()">
+      Create user
+    </button>
   </div>
 </form>
