Add updating board

--- a/src/app/routes/boards/pages/board-settings-page/board-settings-page.component.html
+++ b/src/app/routes/boards/pages/board-settings-page/board-settings-page.component.html
@@ -1,1 +1,33 @@
-<h2>Settings</h2>
+<form [formGroup]="form" (ngSubmit)="onSave()">
+  <div class="form-group row" title="Board's unique UID">
+    <label for="update-board-form-uid" class="col-sm-3 col-md-2 col-form-label">UID</label>
+    <div class="col-sm-9 col-md-10">
+      <input
+        id="update-board-form-uid"
+        type="text"
+        class="form-control"
+        formControlName="uid"
+        readonly
+      />
+    </div>
+  </div>
+  <div class="form-group row" title="Board's common name">
+    <label for="update-board-form-name" class="col-sm-3 col-md-2 col-form-label">Name</label>
+    <div class="col-sm-9 col-md-10">
+      <input id="update-board-form-name" type="text" class="form-control" formControlName="name" />
+    </div>
+  </div>
+  <div class="form-group row" title="Board's description">
+    <label for="update-board-form-description" class="col-sm-3 col-md-2 col-form-label">
+      Description
+    </label>
+    <div class="col-sm-9 col-md-10">
+      <textarea
+        id="update-board-form-description"
+        class="form-control"
+        formControlName="description"
+      ></textarea>
+    </div>
+  </div>
+  <button type="submit" class="btn btn-outline-primary">Save</button>
+</form>
