--- a/src/app/routes/home/pages/home-page/home-page.component.html
+++ b/src/app/routes/home/pages/home-page/home-page.component.html
@@ -32,9 +32,7 @@
 <footer class="footer mt-auto py-3">
   <div class="container">
     <span class="text-muted">
-      Copyright &copy; {{ year }}
-      <a href="https://github.com/malczuuu" target="_blank">Damian Malczewski</a>
-      . All rights reserved.
+      Copyright &copy; {{ year }}.
     </span>
   </div>
 </footer>
