--- a/src/app/routes/home/pages/home-page/home-page.component.html
+++ b/src/app/routes/home/pages/home-page/home-page.component.html
@@ -31,8 +31,6 @@
 
 <footer class="footer mt-auto py-3">
   <div class="container">
-    <span class="text-muted">
-      Copyright &copy; {{ year }}.
-    </span>
+    <span class="text-muted">Copyright &copy; {{ year }}.</span>
   </div>
 </footer>
