Add comments section for issue

--- a/src/app/routes/boards/pages/browse-issue-page/browse-issue-page.component.html
+++ b/src/app/routes/boards/pages/browse-issue-page/browse-issue-page.component.html
@@ -57,4 +57,12 @@
     </div>
     <button type="submit" class="btn btn-outline-primary">Save</button>
   </form>
+
+  <hr />
+
+  <app-comment-section
+    [comments]="comments"
+    (save)="onNewComment($event)"
+    (pageChange)="onPageChange($event)"
+  ></app-comment-section>
 </ng-template>
