--- a/src/app/routes/boards/pages/browse-issue-page/browse-issue-page.component.html
+++ b/src/app/routes/boards/pages/browse-issue-page/browse-issue-page.component.html
@@ -61,6 +61,7 @@
   <hr />
 
   <app-comment-section
+    #commentSection
     [comments]="comments"
     (save)="onNewComment($event)"
     (pageChange)="onPageChange($event)"
