Enable updating users

--- a/src/app/routes/admin/components/users-list/users-list.component.html
+++ b/src/app/routes/admin/components/users-list/users-list.component.html
@@ -21,6 +21,8 @@
           id="user-role-select-{{ user.uid }}"
           class="form-control form-control-sm"
           [value]="user.role"
+          #roleSelect
+          (change)="onRoleSelect(user, roleSelect.value)"
         >
           <option value="user">User</option>
           <option value="admin">Admin</option>
