--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
-@import '~bootstrap/scss/bootstrap';
-@import '~ngx-toastr/toastr-bs4-alert';
+@import 'bootstrap/scss/bootstrap';
+@import 'ngx-toastr/toastr-bs5-alert';
 
 html,
 body {
