Apply prettier to all files

--- a/src/app/routes/users/pages/user-info-page/user-info-page.component.html
+++ b/src/app/routes/users/pages/user-info-page/user-info-page.component.html
@@ -10,9 +10,7 @@
     </div>
   </div>
   <div class="form-group row" title="Account e-mail address">
-    <label for="account-form-email" class="col-sm-3 col-md-2 col-form-label">
-      E-mail address
-    </label>
+    <label for="account-form-email" class="col-sm-3 col-md-2 col-form-label">E-mail address</label>
     <div class="col-sm-9 col-md-10">
       <input
         id="account-form-email"
@@ -30,9 +28,7 @@
     </div>
   </div>
   <div class="form-group row" title="Account first name">
-    <label for="account-form-first-name" class="col-sm-3 col-md-2 col-form-label">
-      First name
-    </label>
+    <label for="account-form-first-name" class="col-sm-3 col-md-2 col-form-label">First name</label>
     <div class="col-sm-9 col-md-10">
       <input
         id="account-form-first-name"
@@ -44,9 +40,7 @@
     </div>
   </div>
   <div class="form-group row" title="Account last name">
-    <label for="account-form-last-name" class="col-sm-3 col-md-2 col-form-label">
-      Last name
-    </label>
+    <label for="account-form-last-name" class="col-sm-3 col-md-2 col-form-label">Last name</label>
     <div class="col-sm-9 col-md-10">
       <input
         id="account-form-last-name"
