--- a/src/app/routes/account/pages/account/account-page.component.html
+++ b/src/app/routes/account/pages/account/account-page.component.html
@@ -50,9 +50,7 @@
       </div>
     </div>
     <div class="form-group row" title="Account last name">
-      <label for="account-form-last-name" class="col-sm-3 col-md-2 col-form-label">
-        Last name
-      </label>
+      <label for="account-form-last-name" class="col-sm-3 col-md-2 col-form-label">Last name</label>
       <div class="col-sm-9 col-md-10">
         <input
           id="account-form-last-name"
