--- a/src/app/routes/admin/components/new-user-form/new-user-form.component.html
+++ b/src/app/routes/admin/components/new-user-form/new-user-form.component.html
@@ -49,9 +49,7 @@
     </div>
   </div>
   <div class="form-group row" title="User's first name">
-    <label for="account-form-first-name" class="col-sm-4 col-md-3 col-form-label">
-      First name
-    </label>
+    <label for="account-form-first-name" class="col-sm-4 col-md-3 col-form-label">First name</label>
     <div class="col-sm-8 col-md-9">
       <input
         id="account-form-first-name"
@@ -62,9 +60,7 @@
     </div>
   </div>
   <div class="form-group row" title="User's last name">
-    <label for="account-form-last-name" class="col-sm-4 col-md-3 col-form-label">
-      Last name
-    </label>
+    <label for="account-form-last-name" class="col-sm-4 col-md-3 col-form-label">Last name</label>
     <div class="col-sm-8 col-md-9">
       <input
         id="account-form-last-name"
